--- a/app/src/main/res/layout/widget_movie_card.xml
+++ b/app/src/main/res/layout/widget_movie_card.xml
@@ -4,14 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/round"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="400dp">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.02"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8"/>
 
     <ImageView
         android:id="@+id/poster"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/half_round"
+        android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@drawable/test"
         android:contentDescription="TODO" />
@@ -24,7 +41,7 @@
         android:textStyle="bold"
         android:textSize="20sp"
         tools:text="Gabriel's Inferno Part III"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/poster"
         />
@@ -35,9 +52,8 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         tools:text="2020-11-19"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/originalTitle"
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
