--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,26 +9,41 @@
         android:id="@+id/nav_main"
         android:name="com.themovieviewer.presentation.ui.main.MainFragment"
         android:label="@string/menu_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_MainFragment_to_MovieDetailsFragment"
+            app:destination="@+id/nav_movie_details" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_movie_details"
-        android:name="com.themovieviewer.presentation.ui.main.MainFragment"
+        android:name="com.themovieviewer.presentation.ui.moviedetails.MovieDetailsFragment"
         android:label="@string/menu_movie_details"
-        tools:layout="@layout/fragment_movie_details" />
+        tools:layout="@layout/fragment_movie_details" >
+        <argument
+            android:name="movie"
+            app:argType="com.themovieviewer.domain.model.Movie" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.themovieviewer.presentation.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_HomeFragment_to_MovieDetailsFragment"
+            app:destination="@+id/nav_movie_details" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.themovieviewer.presentation.ui.gallery.GalleryFragment"
         android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
+        tools:layout="@layout/fragment_gallery">
+        <action
+            android:id="@+id/action_GalleryFragment_to_MovieDetailsFragment"
+            app:destination="@+id/nav_movie_details" />
+    </fragment>
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.themovieviewer.presentation.ui.slideshow.SlideshowFragment"
