--- a/app/src/main/res/layout/widget_credits_vertical.xml
+++ b/app/src/main/res/layout/widget_credits_vertical.xml
@@ -26,7 +26,7 @@
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
-                android:id="@+id/poster"
+                android:id="@+id/profile"
                 android:scaleType="fitXY"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
