--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -7,186 +7,205 @@
             name="viewModel"
             type="com.themovieviewer.presentation.ui.moviedetails.MovieDetailsFragmentViewModel" />
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
-        >
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/startGuideLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.05"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/endGuideLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.95"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-        <ImageView
-            android:id="@+id/backdropImage"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitXY"
-            android:src="@{viewModel.backdropImage}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_height="match_parent"
+            android:background="@android:color/black"
+            >
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/startGuideLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.05"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-        <ImageView
-            android:layout_margin="20dp"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:src="@{viewModel.posterImage}"
-            tools:src="@drawable/test"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/endGuideLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.95"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.title}"
-            tools:text="motal aaaa"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/backdropImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <ImageView
+                android:id="@+id/backdropImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="fitXY"
+                android:src="@{viewModel.backdropImage}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/releaseDate"
-            android:layout_marginTop="15dp"
-            android:paddingEnd="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.releaseDate}"
-            tools:text="1999-10-12"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@+id/title"
-            app:layout_constraintEnd_toStartOf="@+id/blank"
-            app:layout_constraintStart_toStartOf="parent"/>
-        <TextView
-            android:id="@+id/blank"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=" / "
-            tools:text=" / "
-            app:layout_constraintHorizontal_chainStyle="packed"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toTopOf="@+id/releaseDate"
-            app:layout_constraintEnd_toEndOf="@+id/runtime"
-            app:layout_constraintStart_toEndOf="@+id/releaseDate"/>
+            <ImageView
+                android:layout_margin="20dp"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:src="@{viewModel.posterImage}"
+                tools:src="@drawable/test"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/runtime"
-            android:paddingStart="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.runtime}"
-            tools:text="1h 50m"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toTopOf="@+id/releaseDate"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/blank"/>
+            <TextView
+                android:id="@+id/title"
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.title}"
+                tools:text="motal aaaa"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/backdropImage"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/genres"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.genres}"
-            tools:text="Drama"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/releaseDate"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/releaseDate"
+                android:layout_marginTop="15dp"
+                android:paddingEnd="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.releaseDate}"
+                tools:text="1999-10-12"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                app:layout_constraintEnd_toStartOf="@+id/blank"
+                app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/blank"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" / "
+                tools:text=" / "
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toTopOf="@+id/releaseDate"
+                app:layout_constraintEnd_toEndOf="@+id/runtime"
+                app:layout_constraintStart_toEndOf="@+id/releaseDate"/>
 
+            <TextView
+                android:id="@+id/runtime"
+                android:paddingStart="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.runtime}"
+                tools:text="1h 50m"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toTopOf="@+id/releaseDate"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/blank"/>
 
-        <TextView
-            android:id="@+id/tagline"
-            android:layout_marginTop="20dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.tagline}"
-            tools:text="How much can you know about yourself if you've never been in a fight?"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/genres"
-            app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
-            app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
+            <TextView
+                android:id="@+id/genres"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.genres}"
+                tools:text="Drama"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/releaseDate"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/tvOverView"
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Over View"
-            tools:text="Over View"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/tagline"
-            app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
+            <TextView
+                android:id="@+id/voteAverage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.voteAverage}"
+                tools:text="Drama"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/genres"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
-        <TextView
-            android:id="@+id/overView"
-            android:layout_marginTop="10dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{viewModel.overview}"
-            tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground"
-            android:textColor="@android:color/white"
-            app:layout_constraintTop_toBottomOf="@+id/tvOverView"
-            app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
-            app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
+            <TextView
+                android:id="@+id/tagline"
+                android:layout_marginTop="20dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.tagline}"
+                tools:text="How much can you know about yourself if you've never been in a fight?"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/voteAverage"
+                app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
+                app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
 
-        <View
-            android:id="@+id/pane"
-            android:background="@android:color/white"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/overView"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            <TextView
+                android:id="@+id/tvOverView"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="Over View"
+                tools:text="Over View"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/tagline"
+                app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
 
-        <TextView
-            android:id="@+id/credits"
-            android:layout_margin="10dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Top Billed Cast"
-            tools:text="Top Billed Cast"
-            android:textColor="@android:color/black"
-            app:layout_constraintTop_toTopOf="@+id/pane"
-            app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
+            <TextView
+                android:id="@+id/overView"
+                android:layout_marginTop="10dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.overview}"
+                tools:text="A ticking-time-bomb insomniac and a slippery soap salesman channel primal male aggression into a shocking new form of therapy. Their concept catches on, with underground"
+                android:textColor="@android:color/white"
+                app:layout_constraintTop_toBottomOf="@+id/tvOverView"
+                app:layout_constraintEnd_toEndOf="@+id/endGuideLine"
+                app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/creditsRecyclerView"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            tools:listitem="@layout/widget_credits_vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/credits"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <View
+                android:id="@+id/pane"
+                android:background="@android:color/white"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintTop_toBottomOf="@+id/overView"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <TextView
+                android:id="@+id/credits"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="Top Billed Cast"
+                tools:text="Top Billed Cast"
+                android:textColor="@android:color/black"
+                app:layout_constraintTop_toTopOf="@+id/pane"
+                app:layout_constraintStart_toStartOf="@+id/startGuideLine"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/creditsRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/credits"
+                tools:listitem="@layout/widget_credits_vertical" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </layout>
