--- a/app/src/main/res/layout/widget_credits_vertical.xml
+++ b/app/src/main/res/layout/widget_credits_vertical.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@android:color/white"
     android:padding="5dp"
-    android:layout_width="150dp"
-    android:layout_height="300dp"
+    android:layout_width="135dp"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
@@ -29,30 +29,33 @@
                 android:id="@+id/profile"
                 android:scaleType="fitXY"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="135dp"
                 tools:src="@drawable/test"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
-                android:id="@+id/originalTitle"
+                android:padding="5dp"
+                android:id="@+id/originalName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
                 android:textStyle="bold"
                 android:textSize="15sp"
                 tools:text="aaaaaaaa"
-                app:layout_constraintTop_toBottomOf="@+id/poster"
+                app:layout_constraintTop_toBottomOf="@+id/profile"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <TextView
-                android:id="@+id/releaseDate"
+                android:padding="5dp"
+                android:id="@+id/character"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
-                tools:text="2021-05-04"
-                app:layout_constraintTop_toBottomOf="@+id/originalTitle"
+                tools:text="character"
+                app:layout_constraintTop_toBottomOf="@+id/originalName"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
