--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -48,5 +48,9 @@
         android:id="@+id/nav_slideshow"
         android:name="com.themovieviewer.presentation.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_slideshow" >
+        <action
+            android:id="@+id/action_SlideshowFragment_to_MovieDetailsFragment"
+            app:destination="@+id/nav_movie_details" />
+    </fragment>
 </navigation>
