implementing Favorites Movie Function updated toolbar add, remove movie to favorites

--- a/app/src/main/res/layout/widget_movie_main_horizontal.xml
+++ b/app/src/main/res/layout/widget_movie_main_horizontal.xml
@@ -110,6 +110,17 @@
                 app:layout_constraintStart_toStartOf="@+id/textGuideLine"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
+                <View
+                    android:id="@+id/selection"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/black"
+                    android:alpha="0.1"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
