Relocated favorite features

--- a/app/src/main/res/layout/widget_movie_main_horizontal.xml
+++ b/app/src/main/res/layout/widget_movie_main_horizontal.xml
@@ -52,6 +52,7 @@
                 android:scaleType="fitXY"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:src="@drawable/placeholder"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/imageGuideLine"
