--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,6 +23,9 @@
         <argument
             android:name="movie"
             app:argType="com.themovieviewer.domain.model.Movie" />
+        <argument
+            android:name="fromFavoriteScreen"
+            app:argType="boolean" />
     </fragment>
 
     <fragment
