Application 리펙토링 중

--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -362,7 +362,7 @@
                 app:layout_constraintWidth_percent="0.8"
                 app:showPoster="@{viewModel.showPoster}"
                 app:imageFromUrl="@{viewModel.posterImage}"
-                android:onClick="@{fragment::clickOnPoster}"
+                android:onClick="@{fragment.clickOnPoster}"
                 android:visibility="invisible"
                 android:src="@drawable/test"
                 tools:src="@drawable/test"
